[gd_scene load_steps=4 format=3 uid="uid://b5x1vq8nw3w8c"]

[ext_resource type="Script" path="res://scripts/TrainingDialogueScene.gd" id="1"]
[ext_resource type="Script" path="res://scripts/DialogueSystem.gd" id="2"]
[ext_resource type="Texture2D" path="res://assets/images/backgrounds/campo.webp" id="3"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0, 0, 0, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 0.5)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="TrainingDialogueScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="DialogueSystem" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2")

[node name="Background" type="TextureRect" parent="DialogueSystem"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("3")
expand_mode = 1
stretch_mode = 6

[node name="CharacterSprite" type="TextureRect" parent="DialogueSystem"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -300.0
offset_right = 200.0
offset_bottom = 300.0
expand_mode = 1
stretch_mode = 5

[node name="DialogueBox" type="Panel" parent="DialogueSystem"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -250.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("1")

[node name="NameLabel" type="Label" parent="DialogueSystem/DialogueBox"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 10.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Nombre"
vertical_alignment = 1

[node name="DialogueText" type="RichTextLabel" parent="DialogueSystem/DialogueBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 50.0
offset_right = -20.0
offset_bottom = -40.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
bbcode_enabled = true
text = "Texto del diálogo aquí..."
fit_content = true

[node name="ContinueIndicator" type="Label" parent="DialogueSystem/DialogueBox"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -30.0
offset_right = -20.0
offset_bottom = -10.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "▼ Continuar"
horizontal_alignment = 2

[node name="ChoiceContainer" type="VBoxContainer" parent="DialogueSystem"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
theme_override_constants/separation = 10
